config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: my-internships.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: advanced-programming-frontend
                port:
                  number: 8082
          - path: /internships
            pathType: Prefix
            backend:
              service:
                name: advanced-programming-internships
                port:
                  number: 5001
          - path: /internship_spaces
            pathType: Prefix
            backend:
              service:
                name: advanced-programming-internshipspaces
                port:
                  number: 5002
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: advanced-programming-users
                port:
                  number: 5003
